# my-kernel-1

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  efficiency.md  kernel.ld  run.sh  runner.sh  state-1.md  test-runner.sh
.cargo/: config.toml
_seastar/: Cargo.toml  ids.rs  lib.rs  process.rs  purpose.md  seastar.md  table.rs
abalone/: Cargo.toml  abalone-refactor.md  fix_slab.md
abalone/src/: buddy.rs  bump.rs  lib.rs  linked_list.rs  slab.rs  tlsf.rs
docs/: commands.md  independent-kernel-stack-plan.md  plan.md
iso_root/boot/limine/: limine.conf
mantle/: Cargo.toml  recommended-upgrades.md
mantle/src/: lib.rs  pml4.rs  prot.rs  table.rs  walker.rs
src/: arch.rs  gdt.rs  limine_data.rs  main.rs  os_constants.rs  panic.rs  post_stack_state.rs  process.rs  serial.rs  testing.rs  tests.rs  timer.rs  vga_buffer.rs
src/dead_code/: pmm.rs
src/interrupts/: apic.rs  dispatch.rs  exceptions.rs  handlers.rs  mod.rs  pic.rs  stats.rs  vectors.rs
src/memory/: config.rs  heap.rs  main.rs  mod.rs  pmm.rs  stack.rs  vmm.rs
src/writers/: framebuffer.rs  limine_data.rs  mod.rs  serial.rs  vga_buffer.rs
