[package]
name = "my-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
limine    = "0.6.3"
x86_64    = "0.15"
pic8259   = "0.10"
spin      = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
pc-keyboard = "0.9"

[profile.dev]
panic = "abort"
opt-level = 1          # 0 can produce stack frames too large for IST stacks

[profile.release]
panic = "abort"
opt-level = 3
lto = "thin"
codegen-units = 1
