[package]
name = "my-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
abalone   = { path = "abalone" }
bitwise   = { path = "bitwise" }
mantle    = { path = "mantle" }
limine    = "0.6.3"
x86_64    = "0.15"
pic8259   = "0.10"
spin      = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
pc-keyboard = "0.9"
uart_16550  = "0.3"
volatile    = "0.2"

[profile.dev]
panic = "abort"
opt-level = 1          # 0 can produce stack frames too large for IST stacks

[profile.test]
panic = "abort"        # must match dev; mismatching causes build-std to emit two core crates

[profile.release]
panic = "abort"
opt-level = 3
lto = "thin"
codegen-units = 1
